# mnemosyne

./: .gitignore  CHANGELOG.md  README.md  RELEASING.md  deploy_hermes_provider.sh  pyproject.toml  setup.py
.githooks/: pre-commit  pre-push
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  configuration.md
docs/api/: configuration.mdx  tool-schema.mdx
docs/integrations/: hermes-mcp.md
examples/: embedding_server.py
hermes_memory_provider/: README.md  __init__.py  cli.py  plugin.yaml
integrations/hermes/: README.md
mnemosyne/: __init__.py  mcp_server.py
mnemosyne/core/: beam.py  binary_vectors.py  embeddings.py  entities.py  polyphonic_recall.py
mnemosyne/core/importers/: hindsight.py
results/: beam_e2e_results.json  beam_e2e_summary.json  paired_outcomes.jsonl
scripts/: generate-docs.py  memoria_audit.py
tests/: test_beam.py  test_beam_e5_polyphonic_recall.py  test_entities.py  test_extraction_integration.py  test_hermes_memory_provider_shared_crud.py  test_hermes_memory_provider_shared_multi_agent.py  test_integration.py  test_mcp_server.py  test_multilingual_local_recall.py  test_provider_all_15_tools.py  test_s1_mcp_sse_auth.py  test_temporal_recall.py
tools/: evaluate_beam_end_to_end.py
